<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JumpTrack</string>

    <!-- Properties -->
    <string name="versionName"> </string>

    <!-- ASCII Art -->
    <string name="chevron">&gt;</string>
    <string name="listicon">o</string>
    <string name="reorder">=</string>
    <string name="stopStatus">!</string>

    <!-- Activity Titles -->
    <string name="login">Login</string>
    <string name="newcustomerinfo">New Customer Info</string>
    <string name="routeList">Routes</string>
    <string name="distributionList">Distribution Centers</string>
    <string name="regionList">Regions</string>
    <string name="selectstop">Location List</string>
    <string name="selectinvoice">Delivery Stop</string>
...
    <string name="signature">Signature</string>
    <string name="signatureName">Signature Name</string>
    <string name="titleRoute">Delivery Stops</string>

    <!-- Text Labels -->
    <string name="loginLabel">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="notACustomerLabel"><u>Not a Customer?</u></string>
    <string name="customerLabel">Customer</string>
    <string name="locationLabel">Location</string>
    <string name="nameLabel">Name</string>
    <string name="truckListEmptyLabel">No routes found.\n\nPlease select \'Refresh\' from the pop-up menu to reload the route list.</string>
    <string name="acceptLabel">Accept</string>
...
