<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/supportScreen">

        <LinearLayout
            android:id="@+id/aboutSection"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:layout_alignParentTop="true">
            <ImageView
                android:id="@+id/aboutImage"
                style="@style/dealerLogo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/empty"
                android:gravity="center" />

            <TextView
                android:id="@+id/aboutVersion"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/versionName" />

            <TextView
                android:id="@+id/aboutCopyright"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/copyright" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/supportSection"
            android:orientation="vertical"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/aboutSection"
            android:paddingBottom="12dp" >
        <TextView
            android:id="@+id/textView1"
            style="@style/screenTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:text="@string/supportContactTitle"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/txtContactUs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView1"
            android:layout_marginTop="10dp"
            android:text="@string/techSuppLabel"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="center" />

        <TextView
            android:id="@+id/textView6"
            style="@style/screenTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:text="@string/supportStatusTitle"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_below="@+id/txtContactUs" />

        <RelativeLayout
            android:id="@+id/networkConnectLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView6"
            android:layout_below="@+id/textView6"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:padding="5dp" >

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:layout_marginLeft="5dp"
                android:text="@string/networkConnection"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <CheckBox
                android:id="@+id/networkIndicator"
                android:theme="@style/generalCheckBoxStyle"
                android:clickable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/onoff" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/connectedToServerLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView7"
            android:layout_below="@+id/networkConnectLayout"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:padding="5dp" >

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:layout_marginLeft="5dp"
                android:text="@string/serverConnection"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <CheckBox
                android:id="@+id/connectIndicator"
                android:theme="@style/generalCheckBoxStyle"
                android:clickable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/onoff" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/loggedInLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView7"
            android:layout_below="@+id/connectedToServerLayout"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:padding="5dp" >

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/authIndicator"
                android:layout_toStartOf="@+id/authIndicator">

                <TextView
                    android:id="@+id/lblLoggedIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="5dp"
                    android:text="@string/loggedIn"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/txtLoggedIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_alignParentBottom="true"
                    android:layout_toRightOf="@+id/lblLoggedIn"
                    android:layout_toLeftOf="@+id/authIndicator"
                    android:layout_toStartOf="@+id/authIndicator"
                    android:linksClickable="false"
                    android:singleLine="true"
                    android:gravity="center_vertical" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/authIndicator"
                android:theme="@style/generalCheckBoxStyle"
                android:clickable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/onoff" />
        </RelativeLayout>

        <TextView
            android:id="@+id/textViewBluetooth"
            style="@style/screenTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/support_upload"
            android:layout_marginTop="10dp"
            android:text="@string/bluetoothStatus"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <RelativeLayout
            android:id="@+id/bluetoothAvailableLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView7"
            android:layout_below="@+id/textViewBluetooth"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:padding="5dp" >

            <TextView
                android:id="@+id/textViewBluetoothAvailable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:layout_marginLeft="5dp"
                android:text="@string/bluetoothAvailable"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <CheckBox
                android:id="@+id/bluetoothAvailableIndicator"
                android:theme="@style/generalCheckBoxStyle"
                android:clickable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/onoff" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bluetoothWaitingLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView7"
            android:layout_below="@+id/bluetoothAvailableLayout"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:padding="5dp" >

            <TextView
                android:id="@+id/textViewBluetoothWaiting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:layout_marginLeft="5dp"
                android:text="@string/bluetoothWaiting"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <CheckBox
                android:id="@+id/bluetoothWaitingIndicator"
                android:theme="@style/generalCheckBoxStyle"
                android:clickable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/onoff" />
        </RelativeLayout>

        <TextView
            android:id="@+id/textViewBluetoothDeviceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView7"
            android:layout_below="@+id/bluetoothWaitingLayout"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/devices"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textViewBluetoothDeviceName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textViewBluetoothDeviceLabel"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/textViewBluetoothDeviceLabel"
            android:text="" />

        <LinearLayout
            android:id="@+id/LinLayPermissions"
            android:layout_below="@+id/textViewBluetoothDeviceLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tVpermission"
                style="@style/screenTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:text="@string/permissionStatusTitle"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginRight="20dp"
                android:id="@+id/permissionList" />
        </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/aboutInf"
            android:layout_below="@+id/supportSection"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginBottom="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/aboutOpenSource"
                android:textColor="@color/link_text_color"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/thirdPartyLicenses"/>

            <TextView
                android:id="@+id/aboutTermsOfUse"
                android:textColor="@color/link_text_color"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/termsOfUse"/>
        </LinearLayout>

    </RelativeLayout>

</ScrollView>
