...
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
...
